--- a/final report/finalreport_template.Rmd
+++ b/final report/finalreport_template.Rmd
@@ -26,12 +26,13 @@ The second question we seek to answer is how student alcohol consumption correla
 In order to conduct our study of these two questions, we will be working with a dataset we found on Kaggle. The data was collected for a research paper called “Using Data Mining to Predict Secondary School Student Performance.” The authors describe how the surveys were developed and reviewed by school staff and students (Cortez et al 2). The surveys were then delivered to the students through paper questionnaires with predefined answer choices for 37 different questions, 33 of which are variables in the dataset (Cortez et a 2). The questionnaires were answered by all 395 math students in the Gabriel Pereira and Moushino da Silveira secondary public schools (Cortez et al 2). The secondary school students are what would be considered as "high school" in the United States, with age ranges from 15 - 19 years old, but with a few older individuals up to 22 years old. Additionally different from the United States is that the legal drinking age in Portugal is 18 years old, which is on the upper spectrum for secondary students. Thus, the drinking prevalence in this data set may not correlate to prevalence found in American high schools. However, this data may mirror drinking at the university level better, as to the 21 year age requirement in the US is in the upper age range for university students as is 18 in the upper age range for Portuguese secondary school students.
 
 # Overall Methodology
-In order to assess the first question, we modeled a logistic regression with binge drinking being the respondent variable and familial and external variables serving as the predictor variables. Through this analysis, we intend to understand the significance of certain family and external factors in impacting whether or not a student is a workday binge drinker and interpret the severity of impact of those variables. More specifically, we will be investigating the student's residence, family size, parental separation, mother and father education levels, school support, family support, additional paid math classes, and attendance of nursery as the explanatory variables with workday alcohol consumption (made binary) as the response variable.
+In order to assess the first question, we modeled a logistic regression with binge drinking being the response variable and familial and external variables serving as the predictor variables. Through this analysis, we intend to understand the significance of certain family and external factors in impacting whether or not a student is a workday binge drinker and interpret the severity of impact of those variables.
 
-The methodologies and results for these analyses will be further described in their sections below.
+In order to answer the second question, we modeled a multiple linear regression with workday alcohol consumption as the response variable and more internal factors, such as free time, study time, quality of relationships, extracurriculars, and academic performance as explanatory variables. We additionally modeled linear regressions to understand how workday alcohol consumption impacted academic performance.
 
+With regard to the data availability, there are no missing values and all questions in the survey were filled out by all 395 respondents. Further data wrangling and discussion of the the specific variables utilized for each of the above analyses will be described in their specific sections below.
 
-```{r read_data, echo = FALSE, message = FALSE}
+```{r read_data, echo = FALSE, message = FALSE, warning = FALSE}
 library(tidyverse)
 library(tidymodels)
 library(ggplot2)
@@ -49,9 +50,9 @@ student <- readr::read_csv("data/student-mat.csv")
 
 We conducted a logistic regression to determine what sort of family or external factors may be drivers for student alcohol consumption. We decided to pursue a logistic regression in this case due to the categorical nature of many of the variables. Furthermore, we wanted to do a logistic regression on top of a linear regression, where instead of quantifying the amount of alcoholic drinks, we can assess how these indicators are involved with impacting whether or not a student can be considered an "alcoholic" or "binge drinker."
 
-Thus, in order to set up this logistic regression, we had to begin by transforming the daily alcoholic consumption value into a binary variable. This was done by using the mutate() function to create a new variable that said that an individual was considered a "binge drinker" or "binger" (variable name) based on their self-reported drinking level. According to the National Institute on Alcohol Abuse and Alcoholism (NIAAA), binge drinking is defined as 4 or more drinks is for females and 5 or more drinks is for males (NIAAA). Furthermore, for youths, which is where we will categorize the students here, the drinks are 3 for girls and 3 to 5 for boys (NIAAA). However, for this dataset, the values 1-5 do not indicate the amount of drinks, but rather, a self-reported drinking level, where 1 is "very low" drinking and 5 is "very high" drinking. This is very arbitrary, but in order to create a more binary definition, we defined drinking levels of 4 and 5 (high and very high drinking) on workdays. We additionally focus on workday binge drinking as opposed to the other variable, which is weekend binge drinking, because workday binge drinking is more negatively stigmatized, and is a larger factor in a student's academic and family life than weekend binge drinking.
+Thus, in order to set up this logistic regression, we had to begin by transforming the daily alcoholic consumption value into a binary variable.According to the National Institute on Alcohol Abuse and Alcoholism (NIAAA), binge drinking is defined as 4 or more drinks is for females and 5 or more drinks is for males (NIAAA). Furthermore, for youths, which is where we will categorize the students here, the drinks are 3 for girls and 3 to 5 for boys (NIAAA). However, for this dataset, the values 1-5 do not indicate the amount of drinks, but rather, a self-reported drinking level, where 1 is "very low" drinking and 5 is "very high" drinking. This is very arbitrary, but in order to create a more binary definition, we defined drinking levels of 4 and 5 (high and very high drinking) on workdays. We additionally focus on workday binge drinking as opposed to the other variable, which is weekend binge drinking, because workday binge drinking is more negatively stigmatized, and is a larger factor in a student's academic and family life than weekend binge drinking.
 
-Additionally, the dataset was releveled to make non-binge drinkers the referent group. 
+Thus, in order to create this binary variable, we created an additional variable called "binger" with the mutate() function, where 1 represents someone who self-reported a workday drinking level of 4 or 5 (high and very high drinking level) and 0 represented moderate, low, or very low drinking levels. Furthermore, we factored the data to "Yes" and "No" for binge drinker and not binge drinker, respectively, and then we releveled the data to make non-binge drinkers the referent group. We made non-binge drinkers the referent group because that should be the norm, and we want to observe how binge drinkers compare with non-binge drinkers.
 
 Next, we had to select the predictor variables for our regression. Because we wanted to answer what sort of external or familial factors impact whether a student is a binge drinker, we used the following variables: residence, family size, parental separation, mother and father education level, educational support, family educational support, extra paid tutoring classes, and whether or not the student attended nursery school.
 
@@ -96,13 +97,13 @@ tidy(student_logit_fit, conf.int=TRUE, exponentiate = TRUE)
 
 # Logistic Regression Analysis
 
-Upon completing the logistic regression, we found two variables to be significant at a p-value of 0.05, which were whether or not a student had extra tutoring or not (B8, coefficient for extra_tutoringi) and whether a student had attended nursery or not (coefficient for attended_nurseryi). All other estimates had much higher p-values, which were not close to being significant. Furthermore, we attempted to see how changing the level of education we identified as appropriate for our binary variables on parental education, but the p-value did not shift significantly (change from 0.58/0.60 to 0.66/0.80 for mother's education and father's education respectively).
+Upon completing the logistic regression, we found two variables to be significant at a p-value of 0.05, which were whether or not a student had extra tutoring or not (B8, coefficient for extra_tutoringi) and whether a student had attended nursery or not (coefficient for attended_nurseryi). All other estimates had much higher p-values, which were not close to being significant. Furthermore, we attempted to see how changing the level of education we identified as appropriate for our binary variables on parental education, but the p-value did not shift significantly (change from 0.58/0.60 to 0.66/0.80 for mother's education and father's education respectively). Thus, only for extra tutoring and nursery attendance do we reject the null hypothesis that their estimates are zero and we can state that there is relationship between these variables and workday binge drinking.
 
 Moving forward with the extra_tutoringi variable, the estimate came out to be 4.285 with a p-value of 0.0122 and 95% CI between 1.45 and 14.73. Because the values are exponentiated, this indicates that the odds ratio for this value 4.285, which means that a student with extra paid math classes is 4.285 times as likely to be a binge drinker than someone who does not have extra paid math classes. This is quite interesting and contradicts our original thoughts regarding this variable that higher educational support through tutoring might indicate less likelihood for binge drinking. Some speculation as to why tutoring may be correlated with binge drinking is possibly due to a perceived need for tutoring for the respondent from the students' parents because of the drinking itself. 
 
 With regard to the attended_nurseryi variable, the estimate was 0.252 with a p-value of 0.0139 and 95% CI between 0.08 and 077. As this value is exponentiated, the odds ratio is 0.252 and thus a student who has attended nursery may be 0.252 times as likely to be a binge drinker. This is more in line with our hypothesis that nursery attendance may be indicative of a positive external factor, as it is possible that a family's prioritization of education and possible aversion to binge drinking for children.
 
-Thus, in terms of external and familial factors impacting whether or not a student respondent is a school/work day binge drinker, we assess that there are only two significant variables, which are whether or not the student has extra paid math classes and whether the student has attended nursery school or not.
+Thus, in terms of external and familial factors impacting whether or not a student respondent is a school/workday binge drinker, we assess that there are only two significant variables, which are whether or not the student has extra paid math classes and whether the student has attended nursery school or not.
 
 ```{r logistic regression significant results, echo = FALSE}
 tidy(student_logit_fit, conf.int=TRUE, exponentiate = TRUE) %>%
@@ -110,134 +111,108 @@ tidy(student_logit_fit, conf.int=TRUE, exponentiate = TRUE) %>%
   print()
 ```
 
+# Training Data for Logistic Regression
 
+split data analysis here
 
-#Clearing Missing Data
-```{r cleaning data, message = FALSE, results = 'hide'}
-missingval <- is.na(student)
-head(missingval)
-```
-There are no missing values in our data, and in the above code chunk, the result is no missing values. Therefore we can move on with further analysis and no clearing of variables needs to be done. I put only the head of the data because it was too long to visually see the whole thing however it is all false.
-
-#Data Wrangling
-There are two big questions that we want answered with this data set: whether a students average alcohol consumption is correlated with their family circumstances and whether alcohol consumption has an effect on student life. Lets first look at some geographics of our students and adjust our data as needed to complete a through analysis. 
-```{r geographics, echo = FALSE, message = FALSE}
-student%>%
-  ggplot(aes(x = age)) +
-  geom_boxplot() +
-labs(
-    x = "Age",
-    y = NULL,
-    title = "Average Age of Students") 
-
-```
-We can see from the data that the average age of the students tested was about 17 and there was an out liar at age 22. 
- 
-```{r tables, echo = FALSE, message = FALSE}
-table(student$age)
-table(student$school)
-table(student$ sex)
-table(student$address)
-table(student$famsize)
-table(student$Pstatus)
-table(student$Medu)
-table(student$Fedu)
-table(student$Mjob)
-table(student$reason)
-table(student$guardian)
-table(student$famsup)
-table(student$internet)
-```
-It is important to count some of the important variables in our data so we can see which variables had significant responses that need to be analyzed. 
-
-
-# Logistic Regression Analysis
-
-Upon completing the logistic regression, we found that only one variable to be significant at a p-value of 0.05, which was whether or not a student had extra tutoring or not (B8, coefficient for extra_tutoringi). However, another variable, which was B9 (coefficient for attended_nurseryi), had a p-value of 0.0682, which is very, very close. All other estimates had much higher p-values, which were not close to being significant. Furthermore, we attempted to see how changing the level of education we identified as appropriate for our binary variables on parental education, but the p-value did not shift significantly (change from 0.56/0.95 to 0.87/0.22 for mother's education and father's education respectively).
-
-Moving forward with the extra_tutoringi variable, the estimate came out to be 4.318 with a 95% CI between 1.64 and 12.96, which is an extremely wide range. Because the values are exponentiated, this indicates that the odds ratio for this value 4.318, which means that a student with extra paid math classes is 4.318 times as likely to be a binge drinker than someone who does not have extra paid math classes. This is quite interesting and contradicts our original thoughts regarding this variable that higher educational support through tutoring might indicate less likelihood for binge drinking. Some speculation as to why tutoring may be correlated with binge drinking is possibly due to a perceived need for tutoring for the respondent from the students' parents because of the drinking itself. 
-
-With regard to the attended_nurseryi variable, the estimate was 0.3911 with a 95% CI between 0.145 and 1.123. The CI is very wide and spans across 1. However, since the p-value of 0.0682 is fairly close to 1 and the upper bound for the CI is just above 1. Thus, we will proceed with caution on this variable as we analyze its results due to its closeness to significance. As this value is exponentiated, the odds ratio is 0.3911 and thus a student who has attended nursery may be 0.3911 times as likely to be a binge drinker. Although this value is not very significant, this is somewhat in line with our hypothesis that nursery attendance may be indicative of a family's prioritization of education and possible aversion to binge drinking for children.
-
-Thus, in terms of external and familial factors impacting whether or not a student respondent is a binge drinker, we assess that there is only one significant variable, which is whether or not the student has extra paid math classes. However, we can also proceed with caution on the variable regarding whether the student has attended nursery school or not because of the low p-value.
-
-```{r logistic regression significant results1, echo = FALSE}
-tidy(student_logit_fit, conf.int=TRUE, exponentiate = TRUE) %>%
-  filter(p.value < 0.07) %>%
-  print()
-```
-
-
-#Linear Regression 
+# Multiple Linear Regression - Factors Influencing Workday Alcohol Consumption
 How does student life impact daily alcohol consumption?
 
+A multiple linear regression was run to understand how student life impacts alcohol consumption.  We use Dalc (daily alcohol consumption) as response variables and failures(number of past class failures) , goout (going out with friends) , studytime (weekly study time) , freetime (free time after school), famrel (quality of family relationships), activities (extra-curricular activities), and G3 (final grade in class), romantic (in romantic relationship), health (health status), and absences (number of absences) as explanatory variables. Through this linear regression model, our goal is to answer our second question by understanding how student internal factors explain one's own drinking level.
 
-A multiple linear regression was run to understand how student life impacts alcohol consumption.  We use Dalc (daily alcohol consumption) as response variables and failures(number of past class failures ) , goout (going out with friends) , studytime (weekly study time ) , freetime (free time after school), famrel (quality of family relationships),  G1(first period grade) , G2 (second period grade), G3 ( third period grade)  and activities ( extra-curricular activities) as explanatory variables. 
+It is additionally important to note how these variables are read in the dataset, where workday alcohol consumption (Dalc) is a self-reported scale from 1-5, where 1 is "very low consumption" and 5 is "very high consumption." Number of classes failed (failures) is an integer value of the number of previous classes failed if the number is 1, 2, or 3, and if it's above 3, the value is always 4. Going out with friends (goout) is also a 1-5 self-reported scale of how often the respondent goes out where 5 is very high and 1 is very low. Weekly study time (studytime) is scaled for 1 as < 2 hours, 2 is 2-5 hours, 3 is between 5 to 10 hours, and 4 is greater than 10 hours. Free time after school (freetime) is also a 1-5 self-reported scale where 5 is very high and 1 is very low, and family relationships is similarly a 1-5 scale where 5 excellent and 1 is very bad. Activities is a categorical variable of yes or no, where yes indicates the respondent partakes in extra-curricular activities. The final grade (G3) is a numerical grade ranging from 0 - 20. Being in a romantic relationship (romantic) is a categorical variable of yes or no. Health is a subjective variable, with 5 being very good and 1 being very bad, and absences is an integer amount from 0 to 93. 
 
-One thing to note is that daily alcohol consumption is a self-reported scale from 1-5, where 1 is "very low consumption" and 5 is "very high consumption." Studytime is scaled for 1 as < 2 hours, 2 is 2-5 hours, 3 is between 5 to 10 hours, and 4 is greater than 10 hours. Going out with friends, freetime, and family relationships are also a subjective scales while period grades are numerical 0 - 20. Activities is binary 0, 1.
+We chose to use the final grade as opposed to a mix of the first and second period grades since we want to assess how one's overall academic performance is related to workday alcohol consumption, and we are not looking for specific granularity with regard to a specific period's assessment's relationship with workday alcohol consumption. Additionally, we converted all of the categorical variables to numerically binary variables where 1 is yes and 0 is no.
 
 The linear regression used is the following one:
-Dalc= b0 + b1 * failures +b2 *  goout + b3 * studytime +b4 *  freetime +b5 * famrel+ b6 *  activities + b7* G1 +b8* G2+ b9 * G3 
-In this regression output, only goout, studytime, freetime and famrel were significant at 0.05. 
-The result tells us that an increase in daily alcohol consumption is positively correlated (correlation coefficient= 0.27) with going out with friends. The more frequently a student goes out with friends, the more the student drinks. A one unit increase in going out with friends increases daily alcohol consumption by 0.176.In this case, we can say that going out with friends impacts student daily alcohol consumption. Additionally,  Daily alcohol consumption is negatively correlated (correlation coefficient= 0.2 ) with studytime. In other words, the more students dedicate their time to studying, the less they consume alcohol. A one unit increase in studytime decreases alcohol consumption by 0.146. In short, spending more time studying decreases daily alcohol consumption. Furthermore, daily alcohol consumption is negatively correlated(correlation coefficient= 0.08) with the quality of family relationships. The higher the quality is, the less alcohol consumption is. A one unit increase in the quality of family relationships decreases daily alcohol consumption by 0.1.  Also, Daily alcohol consumption is positively correlated with freetime (correlation coefficient=0.21 ). The more students have free time, the more they consume alcohol. A one unit increase in freetime increase alcohol consumption by 0.13
+Dalc= B0 + B1(failures) + B2(goout) + B3(studytime) + B4(freetime) + B5(famrel) + B6(activities_binary) + B7(G3) + B8(romantic) + B9(health) + B10(absences)
 
-#Linear regression model:
+In addition to building a multiple linear regression model, we also created a correlation matrix to visualize the correlation coefficients between workday alcohol consumption and what we found to be the significant variables from the linear regression model. Through this matrix, we plan to visualize how well the explanatory variables are correlated with daily alcohol consumption, but more importantly, assess how the variables may be dependent on one another as well.
 
-Dalc= 1.28 + 0.176 * goout + 0.146 * studytime + 0.1 * famrel + 0.13 *freetime
- 
+# Linear regression analysis - Factors Influencing Workday Alcohol Consumption:
+
 ```{r linear regression , echo = FALSE, message = FALSE }
-
+student$activities_binary <- ifelse(student$activities == "yes", 1, 0)
+student$romantic_binary <- ifelse(student$romantic == "yes", 1, 0)
 model_regression<-linear_reg()%>%
 set_engine("lm")%>%
-  fit(Dalc ~ failures + goout + studytime + freetime + famrel+ activities + G1 +G2+G3, data=student)
+  fit(Dalc ~ failures + goout + studytime + freetime + famrel+ activities_binary + higher + G3 + romantic_binary + health + absences, data=student)
 print(tidy(model_regression))
 
 ```
 
-#Showing relationship using correlation matrix
- 
- We create a new variable that shows that the average grade of the student using G1, G2, G3.
-```{r average grade, echo = FALSE, message = FALSE }
-student$avg_grade<-(student$G1 + student$G2 + student$G3)/3
-```
- 
-Then we made a visualization of the coefficient correlation between Dalc and the other predictors. 
 
-```{r corrlation matrix, echo = FALSE, message = FALSE}
+```{r correlation matrix, echo = FALSE, message = FALSE}
 new_student<-student%>%
 
-  select(c("Dalc","failures" , "goout", "studytime" , "freetime" ,"famrel", "avg_grade"))
+  select(c("Dalc","failures" , "goout", "studytime" , "freetime" ,"famrel", "activities_binary", "G3", "romantic_binary", "health", "absences"))
 
 dalc_correlation<-cor(new_student)
 
-corrplot(dalc_correlation,method="ellipse", type = 'upper' )
+#corrplot(dalc_correlation,method="ellipse", type = 'upper')
+#space saving for now, can bring back in later if space is available
 
 corrplot(dalc_correlation, method="number" , type="upper")
 
 
 ```
 
-#Seocond linear model:
+In this regression output, only the estimates for goout, studytime, freetime, famrel, and absences were significant at a p-value of 0.05. Thus, for these variables, we reject the null hypothesis that their estimates are 0, and can state that there exists a relationship between these variables and workday alcohol consumption.
 
-failures= 0.11 * Dalc + 0.16
- 
-With a p value of 0.006 less than 0.05, there is enough enough evidence to support that the true coefficient is not 0. 
+From our linear model output, it appears that the more frequently a student goes out with friends, the more the student drinks. A one unit increase in a self-reported, subjective amount of going out with friends (such as high to very high) increases the value of workday alcohol consumption by 0.176. In this case, we can say that going out with friends impacts student daily alcohol consumption. Additionally, a one unit increase in studytime decreases alcohol consumption by 0.146, indicating that those who dedicate more time to studying or have more time for studying have lower alcohol consumption. Furthermore, the higher the quality of family relationships, the less alcohol consumption is. A one unit increase in the quality of family relationships decreases daily alcohol consumption by 0.1. The model's outputs also portray how a one unit increase in freetime also increases alcohol consumption by 0.13. Lastly, daily alcohol consumption is also significantly related to absences, where a single increase in the number can be traced to a 0.01 increase in alcohol consumption. 
 
-With this regression model, the result shows us that a one unit increase in daily alcohol consumption increases the number past failures. So, daily alcohol consumption impacts student average grade. The more students daily consume alcohol, the less , their average grade is.
-```{r alcohol consumption and failures, echo = FALSE, message = FALSE}
+With regard to dependence among the variables as seen in the correlation matrix, the highest correlation coefficients we see are with failures being negatively correlated with average grade with a correlation coefficient of -0.38, and going out time is positively correlated with free time with a correlation coefficient of 0.29. Although it is reasonable to assume that these variables are somewhat dependent and correlated because low grade average is likely related to failing class and people who have more free time are likely to go out more, these correlations coefficients are moderate to low. Therefore, we will not use them to rule out any significant explanatory variables. 
 
+Furthermore, it is important to note that the y-intercept is 1.28, indicating that the base level of drinking is very low amongst the respondents.
+
+It is extremely important to proceed with caution in interpreting the analysis of these variables and relationships because most of them are heavily subjective and not very-well quantified. Especially with regard to the estimates, it is hard to assess what a 0.1 or 0.01 increase in workday alcohol consumption truly indicates since workday alcohol consumption was originally a self-reported, subjective value.
+
+Thus, our multiple linear regression model takes the following form:
+Dalc= 1.28 + 0.176(goout) + 0.146(studytime) + 0.1(famrel) + 0.13(freetime)
+
+# R^2 analysis, RMSE, interactions, and/or graphical representations need to be done here
+I recommend at least R^2, residual graph, and RMSE here
+
+
+# Linear Regression - Alcohol Consumption Impact on Academic Performance:
+With regard to our second question, we also wanted to further analyze the relationship between alcohol consumption and academic performance. Thus, we conducted two linear regression models. For both models, workday alcohol consumption is the explanatory variable while the response variable for the first model is the final grade and the response variable for the second model is the number of class failures. The variables are the same as described and discussed from the previous multiple linear regression model.
+
+# Analysis of Alcohol Consumption's Impact on Academics
+
+G3 = B0 + B1(Dalc)
+```{r alcohol consumption and final grade, echo = FALSE, message = FALSE}
+model_dalc_final_grade<-linear_reg()%>%
+  set_engine("lm")%>%
+  fit(G3~Dalc, data=student)
+print(tidy(model_dalc_final_grade))
+```
+
+The linear regression here was insignificant as the p-value for the estimate, B1, for workday alcohol consumption of 0.28, which is not significant at our preferred p-value of 0.05. Thus, we do not reject the null hypothesis that B1 = 0.
+
+failures = B0 + B1(Dalc)
+
+```{r alcohol consumption and course failures}
 model_dalc_failures<-linear_reg()%>%
   set_engine("lm")%>%
   fit(failures~Dalc, data=student)
 print(tidy(model_dalc_failures))
-
-
 ```
+However, the linear regression for the number of failures as the response variable does produce a significant estimate for Dalc, with a p-value of 0.007, far below our preferred p-value of 0.05. Thus, we can reject the null hypothesis and state that there is evidence to support a relationship between workday alcohol consumption and the number of course failures with the following model:
+
+
+failures = 0.11(Dalc) + 0.17
+
+With this regression model, the result shows us that a one unit increase in daily alcohol consumption increases the number past failures by 0.11. Thus, daily alcohol consumption negatively impacts one's academic performance by contributing to the number of failed classes.
+
+# Conclusion
+
 The logistic regression was able to answer our first research question regarding the importance of certain family and external factors in impacting whether a student was a workday alcohol binge drinker. From the logistic regression model, we discovered that amongst many family and external factors, including student's residence, family size, parental separation, mother and father education levels, school support, family support, additional paid math classes, and attendance of nursery school, only attendance of nursery school and additional paid math classes appeared to be significant. Moreover, if a student attended nursery school, he or she was 0.252 times as likely to be a binge drinker while if someone had additional paid math classes, he or she was 4.285 times as likely to be a binge drinker. 
 
-Through the regression analysis, we have found some important factors that contribute to weekday alcohol consumption. We found that  an increase in freetime and going out with friends lead to an increase in weekday alcohol consumption. Moreover, we have seen that having a good quality of family relationships and spending more time studying decreases weekday alcohol consumption. Furthermore, another take away from this analysis is that as students drink more, their number of past class failures increases. 
+Through the regression analysis, we have found some important factors that contribute to weekday alcohol consumption. We found that an increase in freetime and going out with friends lead to an increase in weekday alcohol consumption. Moreover, we have seen that having a good quality of family relationships and spending more time studying decreases weekday alcohol consumption. Furthermore, another take away from this analysis is that as students drink more, their number of past class failures increases. 
 
 All of these results, however, need to be interpreted with caution as this data represents only a small subset of all secondary school students, as it was taken only taken in two secondary schools in a region of Portugal, and only addressed to math students in those two schools. For future analysis to better understand the relationships among family and external factors, alcohol consumption, and academic and personal life, further data needs to be collected from a wider populace with more random sampling. 
+
+To make further data analysis more compelling, there needs to be less subjectivity and greater objectivity in the variables, especially workday alcohol consumption. In this dataset, it is a self-reported value of very low to very high alcohol consumption, but this provides no bearing as to how many actual drinks someone is consuming, and weakens our current analyses of the relationships between workday alcohol consumption/workday alcohol binge drinking with other factors.
 
  
 #Citations: 
